# dicostapres

./: .env.example  .envrc  .gitignore  README.md  flake.nix  justfile  pyproject.toml
dicostapres/: discord_bot.py  discord_client.py  flask_app.py  main.py  web_server.py
